Version 0.14.0 (2022-01-06)
- Switch some HM-LC-Bl1 to cover
- Use decorators on central methods
- Make decorators async aware
- Don't exclude DutyCycle, needed for old rf-modules
- Don't exclude Watchdog from SV sensor

Version 0.13.3 (2022-01-05)
- HM cover fix: check level for None
- Only device_address is required for HA callback
- Fix: max_temp issue for hm thermostats
- Fix: hm const are str instead of int

Version 0.13.2 (2022-01-04)
- Fix cover state
- Move delete_devices from RPCFunctions to central
- Move new_devices from RPCFunctions to central
- Add method to delete a single device to central

Version 0.13.1 (2022-01-04)
- Use generic climate profiles list

Version 0.13.0 (2022-01-04)
- Remove dedicated json tls option
- Fix unique_id for heating_groups
- Use domain name as base folder name
- Remove domain const from hahomematic

Version 0.12.0 (2022-01-03)
- Split number to integer and float

Version 0.11.2 (2022-01-02)
- Precise entity definitions

Version 0.11.1 (2022-01-02)
- Improve detection of multi channel devices

Version 0.11.0 (2022-01-02)
- Add positional arguments
- Add missing channel no
- Set ED_PHY_CHANNEL min_length to 1
- Add platform zu hub entities
- Use entities in properties
- Add transition to dimmer
- Rename entity.state to entity.value
- Remove channel no, if channel is the only_primary_channel

Version 0.10.0 (2021-12-31)
- Make reset_motion, reset_presence a button
- add check to device_name / Fixes

Version 0.9.1 (2021-12-30)
- Load and clear caches async
- Extend naming strategy to use device name if channel name is not customized

Version 0.9.0 (2021-12-30)
- Add new helper for event_name
- Add channel to click_event payload

Version 0.8.0 (2021-12-29)
- Use base class for file cache
- Rename primary_client to client
- Add export for device definition

Version 0.7.0 (2021-12-28)
- Remove deleted entities from device and central collections
- use datetime for last_events
- Climate IP: use calendar for duration away
